--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
   shaders:
     - assets/shaders/checkerboard.frag
     - assets/shaders/explosion.frag
+    - assets/shaders/fracture.frag
     - assets/shaders/ground.frag
     - assets/shaders/hex_shield.frag
     - assets/shaders/noise.frag
